[tool.poetry]
name = "mrc"
version = "0.1.0"
description = ""
authors = ["Jeff Tao <jatao88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
